--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
       content="Professional-Development-Pal"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;900&display=swap" rel="stylesheet">
     <title>PD-Pal</title>
   </head>
   <body>
